# ArchitectureIQ

./: .env.example  .gitignore  AGENT.html  AGENT.md  AGENTS.md  CLAUDE.md  DEMO_QUESTION_PACK_EXPANSION_PLAN.md  FRONTEND_CONCEPT_IMPLEMENTATION.md  KAN_V2_PHASE1_TO_3_PLAN.md  README.html  README.md  SAMPLING_LEAKAGE_HANDOFF.md  plan-v2.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
backend/: __init__.py  app.py  export_static_data.py
configs/: kan_mlp_pairs_v2.1.yaml
contracts/: CHANGELOG.md  README.md  quiz_bake.schema.json
docs/: FRONTEND_BACKEND.md  README.md  gpt_eval_sync.md
profiles/: v1.yaml  v2.1.yaml  v2.2.yaml  v2.yaml
release_specs/: demo_085aa570328f.json
tests/: test_analysis_tools.py  test_candidate_sets.py  test_custom_setting_progress.py  test_demo_release_collection.py  test_execution_device.py  test_export_quiz_static.py  test_freeze_demo_manifest.py  test_generate_kan_mlp_classification_calibration.py  test_generate_kan_mlp_demo.py  test_infrastructure.py  test_interactive.py  test_kan.py  test_kan_mlp_benchmark_report.py  test_leakage_safe_collection.py  test_leakage_safe_feedback_session.py  test_llm_eval.py  test_mlp_leaky_relu_slope.py  test_model_spec_lines.py  test_multivariate_sampler.py  test_new_families.py  test_parameter_counts.py  test_profile_model_gating.py  test_prompt_excerpt.py  test_prompt_format_parity.py  test_prompt_renderer.py  test_question_audits.py  test_question_budget.py  test_question_generation.py  test_question_inspector.py  test_question_runs.py  test_quiz_api.py  test_runtime.py  (+6 more)
(+1243 files in other folders)
