[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "architecture-iq"
version = "0.1.0"
description = "Architecture Intelligence IQ benchmark for LLMs and humans"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "torch>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
inspector = ["streamlit>=1.32", "matplotlib>=3.8", "sympy>=1.12"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]

[project.scripts]
architecture-iq = "architecture_iq.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
